--- a/src/app/pages/course/create-medium/create-medium.component.html
+++ b/src/app/pages/course/create-medium/create-medium.component.html
@@ -21,7 +21,7 @@
                     <div class="form-group row">
                         <label for="name" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
                             Medium
-                            Name</label>
+                            Name<sup>*</sup></label>
                         <div class="col-sm-9">
                             <input type="text" formControlName="name" nbInput fullWidth id="name"
                                 style="font-size: 12.75px;" placeholder="English">
@@ -30,7 +30,7 @@
                     <div class="form-group row">
                         <label for="short_name" class="label col-sm-3 form-control-label"
                             style="font-size: 12.75px;">Enter
-                            Short Name</label>
+                            Short Name<sup>*</sup></label>
                         <div class="col-sm-9">
                             <input type="text" formControlName="short_name" nbInput fullWidth id="short_name"
                                 placeholder="ENG">
