--- a/src/app/pages/course/view-courses/view-courses.component.html
+++ b/src/app/pages/course/view-courses/view-courses.component.html
@@ -1,4 +1,12 @@
-<nb-card class="col-sm-9">
-    <nb-menu [items]="items" autoCollapse="true">
-    </nb-menu>
-</nb-card>
+<div class="row">
+    <div class="col-sm-4">
+
+    </div>
+    <nb-card class="col-sm-4">
+        <nb-menu [items]="items" autoCollapse="true">
+        </nb-menu>
+    </nb-card>
+    <div class="col-sm-4">
+
+    </div>
+</div>
