--- a/src/app/pages/report-generation/fee-reports/fee-reports.component.html
+++ b/src/app/pages/report-generation/fee-reports/fee-reports.component.html
@@ -15,7 +15,8 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="form-outline">
-                    <input type="search" id="form1" class="form-control" placeholder="All Search" aria-label="Search" />
+                    <input type="search" id="form1" (change)="allSearch($event.target.value)" class="form-control"
+                        placeholder="Filter Manually" aria-label="Search" />
                 </div>
             </div>
             <div class="col-sm-2">
@@ -53,7 +54,21 @@
                     </nb-tab>
 
                     <nb-tab tabTitle="Report Summary">
-                        {{summaryMessage}}
+                        <table class="table table-bordered" *ngIf="totalAmount!=null">
+                            <thead>
+                                <tr>
+                                    <th>Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>{{totalAmount}}</td>
+                                </tr>
+                            </tbody>
+                            <div *ngIf="totalAmount==null">
+                                No courses with mediums
+                            </div>
+                        </table>
                     </nb-tab>
                 </nb-tabset>
             </nb-card>
