--- a/src/app/pages/student-portal/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/student-portal/student-dashboard/student-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div [ngClass]="decideClass()" *ngFor="let lecture of lecturesOfStudent">
+        <div class="col-sm-8" *ngFor="let lecture of lecturesOfStudent">
             <div class="col-lg-12 col-sm-12">
                 <div class="card-box bg-blue">
                     <div class="inner">
@@ -15,9 +15,6 @@
                 </div>
             </div>
         </div>
-        <div [ngClass]="decideClass()">
-
-        </div>
         <div class="col-sm-4" *ngIf="notifications.length!=0">
             <nb-card size="large">
                 <nb-card-header>
@@ -26,14 +23,14 @@
                 <nb-list>
                     <nb-list-item class="noti" *ngFor="let notification of notifications">
                         <ng-container *ngIf="notification.action=='create'">
-                            A New lecture for {{notification.lecture_name}} has been created at <br>
+                            A NEW lecture for {{notification.lecture_name}} has been SCHEDULED at <br>
                             Room - {{notification.room_name}} on <br>
                             Date - {{notification.date}} <br>
                             From - {{notification.start_time}} <br>
                             To - {{notification.end_time}}
                         </ng-container>
                         <ng-container *ngIf="notification.action=='update'">
-                            A New lecture for {{notification.lecture_name}} has been created at <br>
+                            The lecture {{notification.lecture_name}} has been UPDATED to <br>
                             Room - {{notification.room_name}} on <br>
                             Date - {{notification.date}} <br>
                             From - {{notification.start_time}} <br>
