--- a/src/app/pages/teacher/create-teacher/create-teacher.component.html
+++ b/src/app/pages/teacher/create-teacher/create-teacher.component.html
@@ -19,44 +19,44 @@
             <nb-card-body>
                 <form class="form-horizontal" [formGroup]="teacherDetailsForm" (ngSubmit)="submitTeacherForm()">
                     <div class="form-group row">
-                        <label for="name" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
-                            Teacher Name</label>
-                        <div class="col-sm-9">
+                        <label for="name" class="label col-sm-4 form-control-label" style="font-size: 12.75px;">Enter
+                            Teacher Name<sup>*</sup></label>
+                        <div class="col-sm-8">
                             <input type="text" formControlName="name" nbInput fullWidth id="name"
                                 style="font-size: 12.75px;" placeholder="Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="nic" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">NIC
-                            Number</label>
-                        <div class="col-sm-9">
+                        <label for="nic" class="label col-sm-4 form-control-label" style="font-size: 12.75px;">NIC
+                            Number<sup>*</sup></label>
+                        <div class="col-sm-8">
                             <input type="text" formControlName="nic" nbInput fullWidth id="nic" ng-model="field"
                                 style="font-size: 12.75px;" placeholder="981592298v">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="email" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
-                            Email</label>
-                        <div class="col-sm-9">
+                        <label for="email" class="label col-sm-4 form-control-label" style="font-size: 12.75px;">Enter
+                            Email<sup>*</sup></label>
+                        <div class="col-sm-8">
                             <input type="email" formControlName="email" nbInput fullWidth id="email"
-                                style="font-size: 12.75px;" placeholder="Email">
+                                style="font-size: 12.75px;" placeholder="Email" email>
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="mobile_no" class="label col-sm-3 form-control-label"
-                            style="font-size: 12.75px;">Enter Contact Number</label>
-                        <div class="col-sm-9">
-                            <input type="text" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
+                        <label for="mobile_no" class="label col-sm-4 form-control-label"
+                            style="font-size: 12.75px;">Enter Contact Number<sup>*</sup></label>
+                        <div class="col-sm-8">
+                            <input type="number" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
                                 style="font-size: 12.75px;" placeholder="Contact Number">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="address" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
+                        <label for="address" class="label col-sm-4 form-control-label" style="font-size: 12.75px;">Enter
                             Address</label>
-                        <div class="col-sm-9">
+                        <div class="col-sm-8">
                             <input type="text" formControlName="address" nbInput fullWidth id="address"
                                 style="font-size: 12.75px;" placeholder="Home Address">
                         </div>
