--- a/src/app/pages/teacher/view-teacher/view-teacher.component.html
+++ b/src/app/pages/teacher/view-teacher/view-teacher.component.html
@@ -6,15 +6,14 @@
                     <nb-card>
                         <nb-card-header>Register Teacher</nb-card-header>
                         <nb-card-body>
-                            <form class="form-horizontal" [formGroup]="teacherEditForm"
-                                (ngSubmit)="submitTeacherEditForm()">
+                            <form class="form-horizontal">
                                 <div class="form-group row">
                                     <label for="name" class="label col-sm-3 form-control-label"
                                         style="font-size: 12.75px;">Enter
                                         Teacher Name</label>
                                     <div class="col-sm-9">
-                                        <input type="text" formControlName="name" nbInput fullWidth id="name"
-                                            style="font-size: 12.75px;" placeholder="Name">
+                                        <input type="text" [(ngModel)]="teacher.name" name="name" nbInput fullWidth
+                                            id="name" style="font-size: 12.75px;" placeholder="Name">
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -22,8 +21,8 @@
                                         style="font-size: 12.75px;">NIC
                                         Number</label>
                                     <div class="col-sm-9">
-                                        <input type="text" formControlName="nic" nbInput fullWidth id="nic"
-                                            ng-model="field" style="font-size: 12.75px;" placeholder="981592298v">
+                                        <input type="text" name="nic" nbInput fullWidth id="nic" ng-model="field"
+                                            style="font-size: 12.75px;" placeholder="981592298v">
                                     </div>
                                 </div>
 
@@ -32,8 +31,8 @@
                                         style="font-size: 12.75px;">Enter
                                         Email</label>
                                     <div class="col-sm-9">
-                                        <input type="email" formControlName="email" nbInput fullWidth id="email"
-                                            style="font-size: 12.75px;" placeholder="Email">
+                                        <input type="email" [(ngModel)]="teacher.email" name="email" nbInput fullWidth
+                                            id="email" style="font-size: 12.75px;" placeholder="Email">
                                     </div>
                                 </div>
 
@@ -41,8 +40,9 @@
                                     <label for="mobile_no" class="label col-sm-3 form-control-label"
                                         style="font-size: 12.75px;">Enter Contact Number</label>
                                     <div class="col-sm-9">
-                                        <input type="text" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
-                                            style="font-size: 12.75px;" placeholder="Contact Number">
+                                        <input type="text" [(ngModel)]="teacher.mobile_no" name="mobile_no" nbInput
+                                            fullWidth id="mobile_no" style="font-size: 12.75px;"
+                                            placeholder="Contact Number">
                                     </div>
                                 </div>
 
@@ -51,11 +51,12 @@
                                         style="font-size: 12.75px;">Enter
                                         Address</label>
                                     <div class="col-sm-9">
-                                        <input type="text" formControlName="address" nbInput fullWidth id="address"
-                                            style="font-size: 12.75px;" placeholder="Home Address">
+                                        <input type="text" [(ngModel)]="teacher.address" name="address" nbInput
+                                            fullWidth id="address" style="font-size: 12.75px;"
+                                            placeholder="Home Address">
                                     </div>
                                 </div>
-                                <button nbButton type="submit">Submit</button>
+                                <button nbButton type="submit" (click)="submitEdit()">EDIT STUDENT</button>
                             </form>
                         </nb-card-body>
                     </nb-card>
@@ -83,39 +84,43 @@
                 <!-- start -->
                 <nb-card>
                     <nb-card-header>
-                        <div class="row">
-                            <div class="col-sm-2">
-                                Remunerations Of Lectures
+                        <form formGroup="selectRemunTimeForm">
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    Remunerations Of Lectures
+                                </div>
+                                <div class="col-sm-4">
+                                    <nb-select placeholder="Select Lecture"
+                                        (selectedChange)="selectRemunerationLec($event)" formControlName="lecture">
+                                        <nb-option *ngFor="let lecture of lecturesOfTeacher" value={{lecture.id}}>
+                                            {{lecture.name}}
+                                        </nb-option>
+                                    </nb-select>
+                                </div>
+                                <div class="col-sm-1">
+                                    Year
+                                </div>
+                                <div class="col-sm-2">
+                                    <nb-select placeholder="Year" (selectedChange)="selectYear($event)"
+                                        formControlName="year">
+                                        <nb-option *ngFor="let lecYear of lecYears | keyvalue" value={{lecYear.key}}>
+                                            {{lecYear.key}}
+                                        </nb-option>
+                                    </nb-select>
+                                </div>
+                                <div class="col-sm-1">
+                                    Month
+                                </div>
+                                <div class="col-sm-2">
+                                    <nb-select placeholder="Month" (selectedChange)="selectMonth($event)"
+                                        formControlName="month">
+                                        <nb-option *ngFor="let lecMonth of lecMonths" value={{lecMonth}}>
+                                            {{lecMonth}}
+                                        </nb-option>
+                                    </nb-select>
+                                </div>
                             </div>
-                            <div class="col-sm-4">
-                                <nb-select placeholder="Select Lecture"
-                                    (selectedChange)="selectRemunerationLec($event)">
-                                    <nb-option *ngFor="let lecture of lecturesOfTeacher" value={{lecture.id}}>
-                                        {{lecture.name}}
-                                    </nb-option>
-                                </nb-select>
-                            </div>
-                            <div class="col-sm-1">
-                                Year
-                            </div>
-                            <div class="col-sm-2">
-                                <nb-select placeholder="Year" (selectedChange)="selectYear($event)">
-                                    <nb-option *ngFor="let lecYear of lecYears | keyvalue" value={{lecYear.key}}>
-                                        {{lecYear.key}}
-                                    </nb-option>
-                                </nb-select>
-                            </div>
-                            <div class="col-sm-1">
-                                Month
-                            </div>
-                            <div class="col-sm-2">
-                                <nb-select placeholder="Month" (selectedChange)="selectMonth($event)">
-                                    <nb-option *ngFor="let lecMonth of lecMonths" value={{lecMonth}}>
-                                        {{lecMonth}}
-                                    </nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
+                        </form>
                     </nb-card-header>
                     <nb-card-header>
                         <div class="row">
